--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -8,7 +8,7 @@
             <app-text-input formControlName="displayName" [label]="'Display Name'"></app-text-input>
             <app-text-input formControlName="userName" [label]="'Username'"></app-text-input>
             <app-text-input formControlName="email" [label]="'Email address'"></app-text-input>
-            <app-text-input formControlName="phone" [label]="'Phone Number'"></app-text-input>
+            <app-text-input formControlName="phoneNumber" [label]="'Phone Number'"></app-text-input>
             <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
 
             <ul class="text-danger list-unstyled" *ngIf="errors">
@@ -17,7 +17,7 @@
                 </li>
             </ul>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+            <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
         </form>
     </div>
 </div>
