--- a/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -23,15 +23,22 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Review
     </button>
-    <button 
-        [disabled]="loading 
-            || checkoutForm.get('paymentForm').invalid 
-            || !cardNumberValid 
-            || !cardExpiryValid 
-            || !cardCvcValid" 
-        class="btn btn-primary" 
+    <button
+        [disabled]="loading
+            || checkoutForm.get('paymentForm').invalid
+            || !cardNumberValid
+            || !cardExpiryValid
+            || !cardCvcValid"
+        class="btn btn-primary"
         (click)="submitOrder()">
-        Submit order <i class="fa fa-angle-right"></i>
+        Pay with Card <i class="fa fa-angle-right"></i>
+        <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+    </button>
+    <button
+        [disabled]="loading || checkoutForm.get('paymentForm').invalid"
+        class="btn btn-primary"
+        (click)="createBilling()">
+        Pay with Billing <i class="fa fa-angle-right"></i>
         <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
     </button>
 </div>
