--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -9,7 +9,7 @@
                    <app-checkout-delivery [checkoutForm]="checkoutForm"></app-checkout-delivery>
                 </cdk-step>
                 <cdk-step [label]="'Review'">
-                    <app-checkout-review [appStepper]="appStepper"></app-checkout-review>
+                    <app-checkout-review [appStepper]="appStepper" [checkoutForm]="checkoutForm"></app-checkout-review>
                 </cdk-step>
                 <cdk-step [label]="'Payment'">
                     <app-checkout-payment [checkoutForm]="checkoutForm"></app-checkout-payment>
@@ -17,12 +17,7 @@
             </app-stepper>
         </div>
         <div class="col-4">
-            <app-order-totals
-                *ngIf="(basketTotals$ | async)"
-                [shippingPrice]="(basketTotals$ | async).shipping"
-                [subtotal]="(basketTotals$ | async).subtotal"
-                [total]="(basketTotals$ | async).total"
-            ></app-order-totals>
+            <app-order-totals></app-order-totals>
         </div>
     </div>
 </div>
